--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     align-items: center;
 }
 .container{
- background-color:rgba(255, 255, 255, 0.6);;
+ background-color:rgba(255, 255, 255, 0.6);
  height: 400px;
  width: 350px;
  text-align: center;
@@ -23,9 +23,25 @@ h1{
      font-weight: 700;
 }
 .inputs{
-    border-radius: 30px;
-    border: none;
-    padding: 5px;
+     background-color:rgba(255, 255, 255, 0.6);
+     backdrop-filter: blur(10px);
+     border-radius: 30px;
+     border: none;
+     padding: 5px;
+}
+.btn{
+ background-color:rgba(255, 255, 255, 0.6);
+ backdrop-filter: blur(10px);
+ padding: 5px;
+  border-radius: 0 8px 8px 0;
+  border: none;
+  cursor: pointer;
+  font-size: 1rem;
+
+}
+.btn:hover{
+    background-color: #6e6b6b;
+    color: white;
 }
 
 
