--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body{
-    background-image: url("To\ do\ image.jpg");
+    background-image: url("image.jpg");
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -10,42 +10,81 @@ body{
     align-items: center;
 }
 .container{
- background-color:rgba(255, 255, 255, 0.6);
+ color: #fff;
+ box-shadow: 0 0 100px rgba( 0, 0 , 0 , 0.5);
  height: 400px;
  width: 350px;
  text-align: center;
- border-radius: 30px;
+ border-radius: 20px;
  backdrop-filter: blur(10px);
+ border: 3px solid rgba(255, 255, 255, 0.18 ); 
 
 }
 h1{
      font-family: "Science Gothic", sans-serif;
      font-weight: 700;
 }
-.inputs{
-     background-color:rgba(255, 255, 255, 0.6);
+#inputs{
+    flex: 1;
+     background:rgba(255, 194, 209, 0.3);
      backdrop-filter: blur(10px);
      border-radius: 30px;
      border: none;
      padding: 5px;
+     outline: none;
+     
+     
 }
 #btn{
- background-color:rgba(255, 255, 255, 0.6);
+background:rgba(255, 194, 209, 0.3);
  backdrop-filter: blur(10px);
  padding: 5px;
   border-radius: 0 8px 8px 0;
   border: none;
   cursor: pointer;
-  font-size: 1rem;
+  font-size: 1.1rem;
+  transition: all 0.2s ease;
 
 }
 #btn:hover{
     background-color: #6e6b6b;
+    transform: scale(1.1);
     color: white;
 }
 #count{
     font-size: 30px;
 }
 
+#displayText{
+    font-size: 1.2rem;
+    font-family: "SN Pro", static;
+}
+#taskNo{
+   font-size: 1.7rem;
+   font-weight: bold;
 
-    
+}
+.taskBox{
+    background-color: rgba(255, 255, 255, 0.6);
+    backdrop-filter: blur(10px);
+    width: 10px;
+    height: 3px;
+
+}
+.taskContainer {
+  display: flex;
+  flex-direction: column;   
+  align-items: center;      
+}
+#task {
+  width: 250px;
+  padding: 10px 15px;
+  border: 1px solid #ccc;
+  border-radius: 25px;   
+  background-color: white;
+  font-size: 14px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+}
+
+
+
