--- a/style.css
+++ b/style.css
@@ -76,15 +76,11 @@ background:rgba(255, 194, 209, 0.3);
   flex-direction: column;   
   align-items: center;      
 }
-#task {
-  width: 250px;
-  padding: 10px 15px;
-  border: 1px solid #ccc;
-  border-radius: 25px;   
-  background-color: white;
-  font-size: 14px;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+
+.hidden{
+    display: none;
 }
+
 
 
 
