--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h1{
      backdrop-filter: blur(10px);
      border-radius: 30px;
      border: none;
-     padding: 5px;
+     padding: 10px;
      outline: none;
      
      
@@ -78,10 +78,50 @@ background:rgba(255, 194, 209, 0.3);
   align-items: center;      
 }
 
-.hidden{
-    display: none;
+
+#task-list li{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgba(255, 194, 209, 0.3);
+    margin-bottom: 10px;
+    width: fit-content;
+    padding: 8px 10px;
+    border-radius: 30px;
+    font-size: 1.2rem;
+    color: #fff;
+    position: relative;
+    transition: box-shadow 0.2s ease;
+    text-align: center;
+     
 }
 
+#task-list li:hover{
+     box-shadow: 0 0 10px rgba( 0, 0 , 0 , 0.5 );
 
+}
 
+#task-list li .checkboz {
+    min-width: 20px;
+    height: 20px;
+    border: 2px solid rgba(255, 255, 255, 0.3);
+    background: transparent;
+    border-radius: 50%;
+    cursor: pointer;
+    appearance: none;
+    transition: all 0.3s ease;
+}
 
+#task-list li .checkboz:checked{
+    background-color: rgb(75, 40, 40);
+    transform: scale(1.1rem);
+}
+#task-list li .checkboz:checked::before{
+    content: "\2713";
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+
+}
