--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ h1{
      outline: none;
      
      
+     
 }
 #btn{
 background:rgba(255, 194, 209, 0.3);
@@ -88,11 +89,14 @@ background:rgba(255, 194, 209, 0.3);
     width: fit-content;
     padding: 8px 10px;
     border-radius: 30px;
-    font-size: 1.2rem;
+    font-size: 1rem;
     color: #fff;
     position: relative;
     transition: box-shadow 0.2s ease;
-    text-align: center;
+     font-family: 'Montserrat', sans-serif;
+     margin-left: 50px;
+
+
      
 }
 
@@ -124,4 +128,23 @@ background:rgba(255, 194, 209, 0.3);
     align-items: center;
     font-size: 1rem;
 
+}
+.task-button{
+    display: flex;
+    gap: 10px;
+    margin-left: 30px;
+}
+.task-button button{
+    background: rgba(255, 194, 209, 0.3);
+    border-radius: 50%;
+    border: none;
+    width: 30px;
+    height: 30px;
+    color: #fff;
+    transition: all 0.2s ease;
+    cursor: pointer;
+}
+.task-button button:hover{
+    transform: scale(10px);
+    background-color: #6e6b6b;
 }
