Added functionality to delete task button

--- a/style.css
+++ b/style.css
@@ -33,9 +33,10 @@ h1{
      border: none;
      padding: 10px;
      outline: none;
-     
-     
-     
+   
+}
+.emptyImage{
+    border-radius: 15px;
 }
 #btn{
 background:rgba(255, 194, 209, 0.3);
@@ -94,7 +95,7 @@ background:rgba(255, 194, 209, 0.3);
     position: relative;
     transition: box-shadow 0.2s ease;
      font-family: 'Montserrat', sans-serif;
-     margin-left: 50px;
+     margin-left: 30px;
 
 
      
