--- a/style.css
+++ b/style.css
@@ -155,3 +155,8 @@ background:rgba(255, 194, 209, 0.3);
 .task-button .delete-btn{
     background-color:rgba(255, 0, 0, 0.553) ;
 }
+.completed {
+  text-decoration: line-through;
+  color: gray;
+}
+
