--- a/style.css
+++ b/style.css
@@ -157,6 +157,53 @@ background:rgba(255, 194, 209, 0.3);
 }
 .completed {
   text-decoration: line-through;
-  color: gray;
+  text-decoration-color:black ;
+  color: black;
 }
+.stat-container{
+   height: 80px;
+   border-radius: 10px;
+   border: 2px solid rgba(255, 255, 255, 0.18 );
+   display: flex;
+   justify-content: space-around;
+   gap: 20px;
+   width: 100%;
+   align-items: center;
+   margin-bottom: 10px;
+}
+.details{
+    flex: 1;
+}
+.details h3{
+    color: #fff;
+    font-family: 'Roboto Condensed', sans-serif;
 
+    
+}
+#progressBar{
+    width: 100%;
+    height: 7px;
+    background: rgba(255, 194, 209, 0.3);
+    border-radius: 20px;
+    position: relative;
+    margin: 15px;
+}
+#progress{
+    background-color: brown;
+    width: 0%;
+    height: 100%;
+    border-radius: 10px;
+    transition: width 0.2s ease;
+}
+#number{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: brown;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    font-size: 1.5rem;
+    font-family: 'Poppins', sans-serif;
+
+}
