--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body{
  border-radius: 20px;
  backdrop-filter: blur(10px);
  border: 3px solid rgba(255, 255, 255, 0.18 ); 
+ 
 
 }
 h1{
@@ -207,3 +208,17 @@ background:rgba(255, 194, 209, 0.3);
     font-family: 'Poppins', sans-serif;
 
 }
+.footer {
+    width: 100%;
+    text-align: center;
+    padding: 10px 0;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    color: #fff;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 0.9rem;
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
+    flex: 1;
+  
+}
+
